--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/index.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "start": "node backend/index.js"
+    
   },
   "repository": {
     "type": "git",
